[gd_scene load_steps=10 format=2]

[ext_resource path="res://project/assets/elementStone027.png" type="Texture" id=1]
[ext_resource path="res://project/src/Target.tscn" type="PackedScene" id=3]
[ext_resource path="res://project/assets/colored_land.png" type="Texture" id=4]
[ext_resource path="res://project/src/Level.gd" type="Script" id=5]
[ext_resource path="res://project/src/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 70, 70, 0, 70, 0, 0, 70, 0 )

[sub_resource type="TileSet" id=2]
0/name = "elementStone027.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 70, 70 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 419.528, 10 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 492.393, 280.401 )
scale = Vector2( 0.942644, 0.522515 )
texture = ExtResource( 4 )

[node name="LevelBorder" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 70, 70 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 65536, 0, 0, 65549, 0, 0, 131072, 0, 0, 131085, 0, 0, 196608, 0, 0, 196614, 0, 0, 196615, 0, 0, 196617, 0, 0, 196621, 0, 0, 262144, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262157, 0, 0, 327680, 0, 0, 327693, 0, 0, 393216, 0, 0, 393229, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0 )

[node name="Target" parent="." instance=ExtResource( 3 )]
position = Vector2( 471.165, 174.372 )
gravity_scale = 0.75

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="TargetArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea"]
position = Vector2( 594.069, 284.459 )
shape = SubResource( 3 )

[node name="OutOfBounds" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds"]
position = Vector2( 489.758, 481.359 )
shape = SubResource( 4 )

[node name="YouWon" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -20.0
margin_right = 54.0
margin_bottom = 20.0
window_title = "You Won!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndMessege" type="RichTextLabel" parent="YouWon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -15.0
margin_right = 100.0
margin_bottom = 15.0
text = "Press reset to replay
Press back to return to title"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="TargetArea" to="." method="_on_TargetArea_body_entered"]
[connection signal="body_entered" from="OutOfBounds" to="." method="_on_OutOfBounds_body_entered"]
